--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ title: Home
       {{ post.date | date_to_string }}
       |
       {% for tag in post.tags %}
-        {% capture tag_name %}{{ tag }}{% endcapture %}
-        <a href="/tags#{{ tag_name }}"><code class="highligher-rouge">{{ tag_name }}</code></a>
-        &nbsp;
+        {% include tag.html %}
       {% endfor %}
     </span>
 
