--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/reset-fonts-grids.css" />
   <link rel="stylesheet" type="text/css" href="css/resume.css" />
-  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="/public/css/font-awesome.min.css">
 
   <style type="text/css">
     #doc3 {
