--- a/gists/2017-01-30-browser-history-functioning-&-loopback-gotcha/demo.html
+++ b/gists/2017-01-30-browser-history-functioning-&-loopback-gotcha/demo.html
@@ -1,25 +1,31 @@
-<head>
-  <link rel="stylesheet" type="text/css" href="index.css">
-</head>
+<!DOCTYPE html>
+<html>
 
-<div>
-  <a href="#/home">Home</a>
-  <a href="#/page-1">Page 1</a>
-  <a href="#/page-2">Page 2</a>
-  <a href="#/page-3">Page 3</a>
-  <a href="#/page-4">Page 4</a>
-  <a href="#/page-5">Page 5</a>
-</div>
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+  </head>
 
-<div>
-  <button id="backBtn">BACK</button>
-  <button id="forwardBtn">FORWARD</button>
-</div>
+  <body>
+    <div>
+      <a href="#/home">Home</a>
+      <a href="#/page-1">Page 1</a>
+      <a href="#/page-2">Page 2</a>
+      <a href="#/page-3">Page 3</a>
+      <a href="#/page-4">Page 4</a>
+      <a href="#/page-5">Page 5</a>
+    </div>
 
-<hr />
+    <div>
+      <button id="backBtn">BACK</button>
+      <button id="forwardBtn">FORWARD</button>
+    </div>
 
-<div id="historyStructures">
-  <div id="historyStructure"></div>
-</div>
+    <hr />
 
-<script src="index.js"></script>
+    <div id="historyStructures">
+      <div id="historyStructure"></div>
+    </div>
+  </body>
+
+  <script src="index.js"></script>
+</html>
