--- a/gists/2017-09-04-mediarecorder/media-elements.html
+++ b/gists/2017-09-04-mediarecorder/media-elements.html
@@ -5,7 +5,7 @@
   }
 </style>
 
-<video id="video" src="Agent 327 - Operation Barbershop-mN0zPOpADL4.mp4" controls autoplay></video>
+<video id="video" src="/media/common/Agent 327 - Operation Barbershop-mN0zPOpADL4.mp4" controls autoplay></video>
 
 <button id="startBtn" disabled>START</button>
 
