--- a/resume/index.html
+++ b/resume/index.html
@@ -87,6 +87,10 @@
     .yui-u {
       page-break-inside: avoid;
     }
+
+    #bd {
+      margin-bottom: 0;
+    }
   </style>
 </head>
 
@@ -163,7 +167,7 @@
 
                 <div class="talent">
                   <h2>Interface Design</h2>
-                  <p>Credibly streamline mission-critical value with multifunctional functionalities.</p>
+                  <p>Credibly streamline mission-critical value with multiple functionalities.</p>
                 </div>
 
                 <div class="talent">
@@ -195,23 +199,23 @@
               <div class="yui-u">
                 <ul class="talent">
                   <li>Python</li>
-                  <li>Flask</li>
+                  <li>Flowtype</li>
                   <li>Selenium</li>
-                  <li class="last">Scikit-Learn</li>
+                  <li class="last">D3</li>
                 </ul>
 
                 <ul class="talent">
                   <li>NodeJS</li>
-                  <li>Webpack</li>
                   <li>BabelJS</li>
-                  <li class="last">Flowtype</li>
+                  <li>Bootstrap</li>
+                  <li class="last">Flask</li>
                 </ul>
 
                 <ul class="talent">
-                  <li>Bootstrap</li>
+                  <li>Webpack</li>
                   <li>RequireJS</li>
                   <li>jQuery</li>
-                  <li class="last">D3</li>
+                  <li class="last">Scikit-Learn</li>
                 </ul>
               </div>
             </div><!-- :technical -->
@@ -298,29 +302,6 @@
                   </p>
                 </div>
 
-                <div class="job">
-                  <h2>Moveover + Rollover</h2>
-
-                  <p>
-                    <a href="https://github.com/zhirzh/moveover">Moveover</a>
-                    and
-                    <a href="https://github.com/zhirzh/rollover">Rollover</a>
-                    are decorative components for websites.
-
-                    <br />
-
-                    Moveover is inspired from
-                    <a href="https://www.canva.com/">Canva</a>'s
-                    amazing backdrop.
-                    It is based on the <code>Canvas</code> WebAPI and works well across all modern browsers.
-
-                    <br />
-
-                    Rollover is a <code>WebGL</code> based scrollable background, that mimics projection on the interior face of a curved body.
-                    The curvature can follow multiple contours - Linear, Polynomial, and Arctan.
-                  </p>
-                </div>
-
                 <div class="job last">
                   <h2>
                     Webpack Plugin for Flowtype support
@@ -336,6 +317,52 @@
                     <code>flow-babel-webpack-plugin</code>
                     is a Webpack plugin that connects Flow server instance to webpack's build process.
                     This adds the Flow annotation based type checks to existing babel+webpack ecosystem.
+                  </p>
+                </div>
+              </div>
+            </div><!-- :projects -->
+
+            <div class="yui-gf" id="projects">
+              <div class="yui-u first">
+                <h2>Side Projects</h2>
+              </div>
+
+              <div class="yui-u">
+                <div class="job">
+                  <h2>
+                    DooEx
+
+                    <small>
+                      <a href="https://github.com/zhirzh/dooex-client" target="_blank">
+                        <span class="fa fa-external-link"></span>
+                      </a>
+                    </small>
+                  </h2>
+
+                  <p>
+                    A <i>bleeding edge</i> and ever evolving React website that also doubles as progressive webapp, DooEx is an explorer app for Google doodles.
+                  </p>
+                </div>
+
+                <div class="job">
+                  <h2>Rollover</h2>
+
+                  <p>
+                    <a href="https://github.com/zhirzh/rollover">Rollover</a>
+                    is a <code>WebGL</code> experiment that projects a filmstrip on the interior surface of a curved body.
+                    It makes for a compelling
+                    <a href="https://bits-oasis.org/2016main/" target="_blank">visual experience</a>.
+                  </p>
+                </div>
+
+                <div class="job last">
+                  <h2>Moveover</h2>
+
+                  <p>
+                    <a href="https://github.com/zhirzh/moveover">Moveover</a>
+                    is a <code>Canvas</code> experiment inspired from
+                    <a href="https://www.canva.com/" target="_blank">Canva</a>'s
+                    amazing landing page.
                   </p>
                 </div>
               </div>
