add border to posts on main page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ title: Home
    {% if post.content contains '<!-- preview -->' %}
       <a href="{{ site.baseurl }}{{ post.url }}">Read more</a>
    {% endif %}
+
+   <hr style="margin-top: 1em" />
   </div>
   {% endfor %}
 </div>
