--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shirsh Zibbu - Resume</title>
+  <title>Shirsh Zibbu - Resumé</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
   <meta name="keywords" content="" />
@@ -91,6 +91,11 @@
     #bd {
       margin-bottom: 0;
     }
+
+    .yui-gf.last {
+    	padding-bottom: 0;
+    	margin-bottom: 0;
+    }
   </style>
 </head>
 
@@ -118,6 +123,14 @@
                 <a href="mailto:zibbu.shirsh@gmail.com">
                   zibbu.shirsh@gmail.com
                 </a>
+              </h3>
+
+              <h3>
+               <span class="phone">
+                  <span>+91</span><!--
+               --><span>70147</span><!--
+               --><span>58995</span>
+                </span>
               </h3>
 
               <h3>
@@ -395,9 +408,10 @@
 
               <div class="yui-u">
                 <h2>BITS Pilani, Rajasthan, India</h2>
-                <h3>Dual Major</h3>
+                <h3>Dual Major 2013 - 2018</h3>
+                <p>Graduating in May 2018</p>
                 <p>Master of Sciences (Hons.) in Biological Sciences</p>
-                <p>Bachelor of Engineering (Hons.), major in Mechanical<p>
+                <!--<p>Bachelor of Engineering (Hons.), major in Mechanical<p>-->
               </div>
             </div><!-- :education -->
           </div>
